Fix to compilation errors: Replace Base64 private Sun API with public Java 8 API. Fix return type of getPrefixes.